--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -43,9 +43,14 @@
 .simbol {
     border-radius: 30px;
     padding: 15px;
+    /* padding: 0; */
     width: 48px;
     height: 48px;
     background-color: #fff4df;
+    text-align: center;
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
 }
 
 .disabled {
