--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
