--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -22,8 +22,20 @@
     height: 100%;
 }
 
-.active {
+.pageLink {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.active .pageLink {
     background-color: #0a66c2;
     color: white;
     font-weight: bold;
 }
+
+/* ///////////////////////// */
