--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -1,20 +1,39 @@
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .pagination {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 6px;
     margin: 16px 0;
     list-style: none;
     padding: 0;
 }
 
-.pagination li {
-    width: 32px;
-    height: 32px;
-    border: 1px solid #ccc;
+.li,
+.break,
+.previous,
+.next,
+.control {
+    border: 1px solid rgba(38, 38, 38, 0.2);
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 122%;
+    width: 44px;
+    height: 44px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.pagination a {
+.link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,20 +41,15 @@
     height: 100%;
 }
 
-.pageLink {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #eee;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.active .pageLink {
-    background-color: #0a66c2;
-    color: white;
+
+.active {
+    background-color: #f6b83d;
+    color: #fff;
     font-weight: bold;
+    border: none;
 }
 
-/* ///////////////////////// */
+.disabled {
+    border: 1px solid rgba(38, 38, 38, 0.05);
+}
