--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -41,8 +41,6 @@
     height: 100%;
 }
 
-
-
 .active {
     background-color: #f6b83d;
     color: #fff;
@@ -52,4 +50,6 @@
 
 .disabled {
     border: 1px solid rgba(38, 38, 38, 0.05);
+    color: rgba(38, 38, 38, 0.5);
+
 }
