change SearchBox, fix filters ......

--- a/components/SearchBox/SearchBox.module.css
+++ b/components/SearchBox/SearchBox.module.css
@@ -1,4 +1,4 @@
-.form {
+.wrapper {
     display: flex;
     align-items: center;
     width: 230px;
@@ -20,10 +20,20 @@
 }
 
 .buttonSearch {
-    padding: 14px;
+    padding: 5px;
     background-color: inherit;
     border: none;
     cursor: pointer;
     position: absolute;
     right: 15px;
+}
+
+.buttonClear {
+    padding: 5px;
+    margin-right: 10px;
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    right: 35px;
 }
