add auth and fuckin bad API do not work, how i needed

--- a/components/AuthNavigation/AuthNavigation.module.css
+++ b/components/AuthNavigation/AuthNavigation.module.css
@@ -1,6 +1,15 @@
+.navContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .authNavigation {
     display: flex;
+    margin-top: 20px;
+    gap: 10px;
 }
+
 
 .authLink {
     padding: 15px 35px;
