--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -31,6 +31,27 @@
     background-color: #fbe7c1;
 }
 
+.tertiary {
+    background-color: inherit;
+    color: #262626;
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+}
+
+.tertiary:active {
+    border: 1px solid #f6b83d;
+}
+
+.quaternary {
+    background-color: inherit;
+    stroke: #262626;
+    font-weight: 400;
+}
+
 .text {
     font-weight: 500;
     letter-spacing: -0.02em;
