--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -26,7 +26,7 @@
     position: absolute;
     top: 8px;
     right: 8px;
-    background: #fff;
+    background-color: #fff;
     border: none;
     border-radius: 4px;
     width: 32px;
@@ -34,7 +34,7 @@
     font-size: 20px;
     line-height: 0;
     color: #333;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25); */
     cursor: pointer;
     display: flex;
     align-items: center;
