--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -62,16 +62,16 @@
 }
 
 .simbol {
-    border-radius: 30px;
-    padding: 15px;
-    /* padding: 0; */
+    border-radius: 100%;
+    padding: 0;
+    /* padding: 15px; */
     width: 48px;
     height: 48px;
     background-color: #fff4df;
     text-align: center;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .disabled {
