--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -4,8 +4,8 @@
     align-items: center;
     justify-content: space-between;
     gap: 24px;
-    padding: 12px;
-    border-block-end: 1px solid #ccc;
+    padding: 18px;
+    /* border-block-end: 1px solid #c14646; */
 }
 
 /* Desktop navigation visible */
@@ -15,14 +15,37 @@
     align-items: center;
 }
 
+.authBox {
+    display: flex;
+}
+
+.authBoxUser {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.authUser {
+    /* display: flex; */
+    align-items: center;
+    /* text-align: center; */
+    /* padding: 0; */
+}
+
 /* Burger hidden on desktop */
 .burger {
     display: none;
+}
 
+.svgBurger {
+    stroke: #fff;
+    fill: white;
 }
 
 .headerHome {
-    background-color: bisque;
+    background-color: #f6b83d;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
 
 }
 
@@ -38,10 +61,34 @@
     list-style-type: none;
 }
 
-
+.username {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: -0.03em;
+    color: #fff;
+}
 
 /*  MOBILE */
-@media (max-width: 1000px) {
+@media (max-width:768px) {
+    .username {
+        display: none;
+    }
+
+    .logo {
+        width: 76px;
+        height: 20px;
+    }
+
+    .authUser {
+        max-width: 40px;
+        max-height: 40px;
+    }
+}
+
+/*  TABLET */
+@media (max-width: 1280px) {
     .headerNavigation {
         display: none;
     }
