--- a/components/HeaderMobile/HeaderMobile.module.css
+++ b/components/HeaderMobile/HeaderMobile.module.css
@@ -39,7 +39,13 @@
     padding: 15px 25px;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 768px) {
+    .mobileMenu {
+        width: 380px;
+    }
+}
+
+@media (min-width: 1280px) {
     .mobileMenu {
         display: none;
     }
