--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     gap: 24px;
     padding: 18px;
+    /* border: solid 1px blue; */
     /* border-block-end: 1px solid #c14646; */
 }
 
