--- a/app/mainPage.module.css
+++ b/app/mainPage.module.css
@@ -1,4 +1,4 @@
-/* --------------------glued footer---------------------------- */
+/* --------------------glued footer  -  layout---------------------------- */
 .gluedFooterContainer {
     min-height: 100vh;
     display: flex;
@@ -11,3 +11,80 @@
 }
 
 /* ////////////////////////// */
+
+/*  Main  Page */
+
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textContainer {
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    padding: 18px;
+    width: 320px;
+    margin: 0 auto;
+    background-color: #f6b83d;
+}
+
+.title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 96%;
+    letter-spacing: -0.03em;
+    color: #fff;
+}
+
+
+.titleSpan {
+    color: rgba(255, 255, 255, 0.4);
+}
+
+.text {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    color: #fff;
+    margin-top: 24px;
+    margin-bottom: 20px;
+}
+
+
+
+@media (max-width:374px) {
+    .gluedFooterMain {
+        padding: 0;
+    }
+}
+
+@media (min-width:768px) {
+    .textContainer {
+        width: 704px;
+        padding: 32px;
+    }
+
+    .title {
+        font-size: 80px;
+        margin-top: 60px;
+    }
+
+    .text {
+        font-size: 18px;
+        line-height: 122%;
+        margin-top: 32px;
+        margin-bottom: 12px;
+        width: 255px;
+    }
+
+    .textBox {
+        display: flex;
+        justify-content: end;
+
+    }
+
+}
