--- a/components/AuthNavigation/AuthNavigation.module.css
+++ b/components/AuthNavigation/AuthNavigation.module.css
@@ -1,15 +1,16 @@
 .navContainer {
     display: flex;
     flex-direction: column;
+
     gap: 10px;
 }
 
 .authNavigation {
     display: flex;
-    margin-top: 20px;
     gap: 10px;
     align-items: center;
     justify-content: center;
+
 }
 
 
@@ -17,13 +18,24 @@
 @media (max-width: 1280px) {
     .authNavigation {
         flex-wrap: wrap;
-
     }
 
     .authNavBtn {
         width: 178px;
-
     }
 
 
+}
+
+@media (min-width: 1280px) {
+    .authNavBtnProfile {
+        display: none;
+    }
+
+    .authNavBtnLogout {
+        /* border: 1px solid rgba(255, 255, 255, 0.4) !important; */
+        /* background-color: #f6b83d !important; */
+        /* color: #fff !important; */
+        cursor: pointer;
+    }
 }
