--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -36,6 +36,16 @@
 /* Burger hidden on desktop */
 .burger {
     display: none;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .svgBurger {
@@ -75,6 +85,16 @@
 @media (max-width:768px) {
     .username {
         display: none;
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
     }
 
     .logo {
@@ -89,12 +109,33 @@
 }
 
 /*  TABLET */
-@media (max-width: 1280px) {
+@media (max-width: 1279px) {
     .headerNavigation {
         display: none;
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
     }
 
     .burger {
         display: block;
     }
+}
+
+/*   DESKTOP */
+@media (min-width: 1280px) {
+
+    .headerHome .desktonNav {
+        color: #fff;
+        border: 1px solid rgba(255, 255, 255, 0.4);
+    }
+
+
 }
