--- a/components/SearchBox/SearchBox.module.css
+++ b/components/SearchBox/SearchBox.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     display: flex;
     align-items: center;
-    width: 230px;
+    width: 335px;
     position: relative;
 }
 
@@ -36,4 +36,11 @@
     cursor: pointer;
     position: absolute;
     right: 35px;
+}
+
+@media (min-width: 768px) {
+    .wrapper {
+        width: 230px;
+    }
+
 }
