--- a/app/(public)/notices/NoticesClient.module.css
+++ b/app/(public)/notices/NoticesClient.module.css
@@ -27,3 +27,138 @@
     color: white;
     font-weight: bold;
 }
+
+/* --------------------------------- */
+
+.noticesContainer {
+    width: 334px;
+}
+
+.titlePage {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: -0.03em;
+    color: #262626;
+    margin-bottom: 40px;
+}
+
+.noticesList {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.noticesItem {
+    border-radius: 16px;
+    padding: 24px;
+    width: 334px;
+    background-color: #fff;
+}
+
+.imageBox {
+    width: 286px;
+    height: 178px;
+    border-radius: 16px;
+    overflow: hidden;
+    margin-bottom: 24px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* ----------------------- */
+
+.titleBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    color: #2b2b2a;
+}
+
+.popularity {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+}
+
+/* -----------  descr  ---------------- */
+
+.descrList {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 16px;
+}
+
+.descrTitle {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 140%;
+    letter-spacing: -0.02em;
+    color: rgba(38, 38, 38, 0.5);
+}
+
+.descrText {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: -0.02em;
+    color: #262626;
+}
+
+/* ------------------- */
+
+.commentBox {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 12px;
+}
+
+.comment {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    color: #2b2b2a;
+    height: 36px;
+}
+
+.price {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    color: #2b2b2a;
+}
+
+.buttonBox {
+    display: flex;
+    gap: 10px;
+}
+
+.more {
+    text-transform: none;
+    width: 230px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: 1px;
+    color: #fff;
+}
