--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -13,9 +13,10 @@
 
 .modal {
     position: relative;
+    width: 334px;
     max-width: 90vw;
     max-height: 90vh;
-    border-radius: 8px;
+    border-radius: 30px;
     background-color: #fff;
     padding: 24px;
 }
@@ -24,17 +25,15 @@
 
 .closeButton {
     position: absolute;
-    top: 8px;
-    right: 8px;
+    top: 14px;
+    right: 14px;
     background-color: #fff;
     border: none;
     border-radius: 4px;
     width: 32px;
     height: 32px;
-    font-size: 20px;
     line-height: 0;
     color: #333;
-    /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25); */
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -48,4 +47,11 @@
 
 .closeButton:focus {
     outline: 2px solid #007bff;
+}
+
+@media (min-width: 768px) {
+    .modal {
+        width: 466px;
+        padding: 40px;
+    }
 }
