--- a/components/NoticesPetModal/NoticesPetModal.module.css
+++ b/components/NoticesPetModal/NoticesPetModal.module.css
@@ -1,4 +1,143 @@
 .heart {
+    background-color: white;
+    border-radius: 5px;
     stroke: white;
     fill: white;
+}
+
+.container {
+    border-radius: 16px;
+    padding: 8px;
+    margin-top: 24px;
+    /* width: 334px; */
+    background-color: #fff;
+}
+
+.imgContainer {
+    position: relative;
+}
+
+.imageBox {
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-bottom: 24px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.imgText {
+    display: inline-block;
+    border-radius: 30px;
+    padding: 8px 14px;
+    width: 48px;
+    height: 32px;
+    background-color: #fff4df;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 133%;
+    letter-spacing: -0.02em;
+    color: #f6b83d;
+    position: absolute;
+}
+
+.titleBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 24px;
+}
+
+.title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    color: #2b2b2a;
+}
+
+.popularity {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+}
+
+.descrList {
+    display: flex;
+    gap: 28px;
+    margin-bottom: 16px;
+}
+
+.descrTitle {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 140%;
+    letter-spacing: -0.02em;
+    color: rgba(38, 38, 38, 0.5);
+}
+
+.descrText {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: -0.02em;
+    color: #262626;
+}
+
+.commentBox {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-bottom: 20px;
+}
+
+.comment {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #2b2b2a;
+    height: 36px;
+}
+
+.price {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    text-align: center;
+    color: #2b2b2a;
+}
+
+.buttonBox {
+    display: flex;
+    justify-content: space-between;
+}
+
+.add,
+.contact {
+    text-transform: none;
+    /* width: 230px; */
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: 1px;
+    padding: 12px 30px;
+}
+
+.add {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
