--- a/app/(auth)/auth/register/Register.module.css
+++ b/app/(auth)/auth/register/Register.module.css
@@ -148,6 +148,7 @@
         width: 1216px;
         flex-direction: row;
         justify-content: space-between;
+        gap: 32px;
     }
 
     .imgBox {
