--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -64,29 +64,15 @@
 }
 
 .username {
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 100%;
-    letter-spacing: -0.03em;
-    color: #fff;
+    display: none;
+
 }
+
 
 /*  MOBILE */
 @media (max-width:768px) {
-    .username {
-        display: none;
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        border: 0;
-        padding: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
-    }
+
+
 
     .logo {
         width: 76px;
@@ -142,4 +128,20 @@
     }
 
 
+    .username {
+        display: block;
+        font-family: var(--font-family);
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 100%;
+        letter-spacing: -0.03em;
+    }
+
+    .usernameHome {
+        color: #fff;
+    }
+
+    .usernameInner {
+        color: #262626;
+    }
 }
