--- a/app/(auth)/auth/login/Login.module.css
+++ b/app/(auth)/auth/login/Login.module.css
@@ -106,6 +106,11 @@
     top: 12px;
 }
 
+.image {
+    width: 100%;
+    height: auto;
+}
+
 @media (min-width: 768px) {
     .container {
         width: 704px;
@@ -119,6 +124,11 @@
         background: #f6b83d;
         display: flex;
         justify-content: space-around;
+        overflow: hidden;
+    }
+
+    .image {
+        width: 324px;
     }
 
     .textContainer {
@@ -142,10 +152,6 @@
         width: 384px;
     }
 
-    /* .passwordEye {
-        right: 106px;
-        top: 12px;
-    } */
 }
 
 @media (min-width: 1280px) {
