--- a/app/(auth)/auth/register/Register.module.css
+++ b/app/(auth)/auth/register/Register.module.css
@@ -106,6 +106,11 @@
     top: 12px;
 }
 
+.image {
+    width: 100%;
+    height: auto;
+}
+
 @media (min-width: 768px) {
     .container {
         width: 704px;
@@ -119,6 +124,11 @@
         background: #f6b83d;
         display: flex;
         justify-content: space-around;
+        overflow: hidden;
+    }
+
+    .image {
+        width: 324px;
     }
 
     .textContainer {
@@ -148,7 +158,7 @@
         width: 1216px;
         flex-direction: row;
         justify-content: space-between;
-        gap: 32px;
+        /* gap: 32px; */
     }
 
     .imgBox {
@@ -165,7 +175,7 @@
     }
 
     .image {
-        width: 592px;
+        width: 560px;
         height: 600px;
     }
 
