--- a/components/AvatarPicker/AvatarPicker.module.css
+++ b/components/AvatarPicker/AvatarPicker.module.css
@@ -1,48 +1,41 @@
+.container {
+    margin-bottom: 12px;
+}
+
 .picker {
-    width: 300px;
-    height: 300px;
-    border-radius: 12px;
-    border: 1px solid white;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .avatar {
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
+    border-radius: 100px;
+    padding: 10px;
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
 }
 
-.wrapper {
-    cursor: pointer;
-    position: absolute;
-    inset: 0;
-    z-index: 9;
+.urlBox {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    gap: 8px;
 }
 
-.reload {
-    opacity: 0;
+.upload {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 133%;
+    letter-spacing: -0.02em;
+    color: #262626;
+    text-transform: capitalize;
+    height: 42px;
+    padding: 12px;
 }
 
-.input {
-    display: none;
-}
-
-.remove {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 10;
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-}
-
-.error {
-    color: red;
+.inputUrl {
+    border: 1px solid #f6b83d;
+    border-radius: 30px;
+    padding: 13px 13px 13px 12px;
+    width: 161px;
+    height: 42px;
 }
