--- a/components/ModalEditUser/ModalEditUser.module.css
+++ b/components/ModalEditUser/ModalEditUser.module.css
@@ -1,44 +1,25 @@
-.imageBox {
-    border-radius: 100%;
-    padding: 10px;
-    width: 94px;
-    height: 94px;
-    overflow: hidden;
-    margin: 0 auto;
-}
-
-.avatar {
-    width: 100%;
-    height: auto;
-}
-
-.textContainer {
-    margin: 20px;
-}
-
 .title {
+    font-family: var(--font-family);
     font-weight: 700;
-    font-size: 16px;
-    line-height: 125%;
+    font-size: 20px;
+    line-height: 100%;
     color: #2b2b2a;
     margin-bottom: 20px;
 }
 
-.userList {
+.form {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.userData {
+.input {
     border: 1px solid #f6b83d;
     border-radius: 30px;
     padding: 12px 12px 12px 12px;
     width: 295px;
     height: 42px;
-}
-
-.userText {
+    font-family: var(--font-family);
     font-weight: 500;
     font-size: 14px;
     line-height: 129%;
@@ -46,13 +27,16 @@
     color: #262626;
 }
 
-.logout {
+.save {
+    border-radius: 30px;
+    padding: 12px;
+    width: 295px;
+    height: 42px;
+    text-transform: capitalize;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 14px;
     line-height: 129%;
     letter-spacing: -0.03em;
-    text-transform: uppercase;
-    color: #f6b83d;
-    margin-left: 20px;
-    margin-bottom: 30px;
+    color: #fff;
 }
