--- a/app/(public)/notices/NoticesClient.module.css
+++ b/app/(public)/notices/NoticesClient.module.css
@@ -189,6 +189,12 @@
 }
 
 @media (min-width:1280px) {
+    .titlePage {
+        font-size: 54px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        padding-left: 20px;
+    }
 
     .noticesContainer {
         width: 1216px;
