--- a/app/(auth)/profile/profile.module.css
+++ b/app/(auth)/profile/profile.module.css
@@ -2,16 +2,66 @@
     border-radius: 30px;
     width: 335px;
     background-color: #fff;
+    margin-bottom: 40px;
+    border: solid 1px #fff;
+    /* position: relative; */
 }
 
 .btnBox {
-    padding-right: 20px;
-    padding-top: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
-.btnBox button {
+.userBtn {
+    display: flex;
+    gap: 6px;
+    font-weight: 500;
+    opacity: 1;
+}
+
+.editBtn {
     width: 38px;
     height: 38px;
+}
+
+@media (min-width: 768px) {
+    .container {
+        width: 704px;
+
+    }
+
+}
+
+@media (min-width: 1280px) {
+
+    .container {
+        width: 1216px;
+        background: #f9f9f9;
+
+        border: none;
+    }
+
+    .btnBox {
+        justify-content: flex-start;
+        margin-left: 60px;
+        gap: 100px;
+    }
+
+    .profileInfoBox {
+        display: flex;
+        gap: 32px;
+        justify-content: center;
+    }
+
+}
+
+@media (min-width: 1440px) {
+
+    .container {
+        width: 1376px;
+    }
+
+
 }
