--- a/components/UserFavoriteNoticesList/UserFavoriteNoticesList.module.css
+++ b/components/UserFavoriteNoticesList/UserFavoriteNoticesList.module.css
@@ -6,4 +6,35 @@
     letter-spacing: -0.03em;
     color: #262626;
     text-align: center;
+    width: 335px;
+    /* margin: 0 auto; */
+    margin-bottom: 40px;
+
+}
+
+.textSpan {
+    font-weight: 700;
+    color: #f6b83d;
+}
+
+.textLink {
+    cursor: pointer;
+}
+
+@media (min-width:768px) {
+    .text {
+        font-size: 16px;
+        width: 458px;
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+
+    .noticesList {
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* flex-wrap: wrap; */
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
 }
